--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -476,7 +476,7 @@ EXTRAS
       </div>
     </div>
 
-    <div class="container px-0 mt-4">
+    <div id="last-minute" class="container px-0 mt-4">
       <h2 class="mb-3">Last Minute</h2>
       <div class="row row-cols-2">
         <div class="col-2">
