changed folder name

--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -200,16 +200,16 @@ EXTRAS
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Saldi</a>
+              <a class="nav-link" href="#saldi">Saldi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Welcome Summer</a>
+              <a class="nav-link" href="#welcome-summer">Welcome Summer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Last Minute</a>
+              <a class="nav-link" href="#last-minute">Last Minute</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Recensioni</a>
+              <a class="nav-link" href="#recensioni">Recensioni</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -230,11 +230,11 @@ EXTRAS
     <div class="container rounded p-5 mt-5 bg-body-secondary">
       <div class="row">
         <div class="col">
-          <h1 class="display-3">Space-X</h1>
-          <p class="fs-4 fst-italic mb-5">
+          <h1 class="display-3 pb-4 border-bottom">Space-X</h1>
+          <p class="fs-4 fst-italic mt-4 mb-5">
             Scopri le destinazioni più calde del momento!
           </p>
-          <button class="btn btn-danger px-5">Prenota ora</button>
+          <button class="btn fw-bold btn-danger px-5">Prenota ora</button>
         </div>
       </div>
     </div>
@@ -257,7 +257,7 @@ EXTRAS
         </span>
       </div>
 
-      <div class="collapse px-0" id="saldi">
+      <div class="collapse show px-0" id="saldi">
           <div class="row">
             <div class="col">
               <div class="card">
@@ -335,7 +335,7 @@ EXTRAS
 
     <!-- WELCOME SUMMER SECTION START-->
 
-    <div id="welcome"class="container px-0 mt-4">
+    <div id="welcome-summer"class="container px-0 mt-4">
       <div class="d-flex justify-content-between">
         <h2 class="d-inline-block fs-4 mb-4">Welcome to Summer</h2>
         <span>
@@ -351,7 +351,7 @@ EXTRAS
         </span>
       </div>
 
-      <div class="collapse" id="welcome-summer">
+      <div class="collapse show" id="welcome-summer">
           <div class="row">
             <div class="col">
               <div class="card">
@@ -500,7 +500,7 @@ EXTRAS
       </div>
     </div>
 
-    <div class="container px-0 mt-4">
+    <div id="recensioni" class="container px-0 mt-4">
       <h2 class="mb-3">Dicono di noi</h2>
       <div class="row">
         <div class="col d-flex">
