added some changes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ EXTRAS
     </nav>
     <!-- NAV END -->
 
-    
+    <div class="p-4">
     <!-- HERO START -->
     <div id="hero"class="container rounded p-5 mt-5 bg-body-secondary">
       <div class="row">
@@ -607,7 +607,7 @@ EXTRAS
       </div>
     </div>
     <!-- RECENSIONI SECTION END-->
-
+  </div>
     <!-- FOOTER SECTION END-->
     <div class="bg-body-secondary p-5 d-flex flex-column align-items-center">
       <button class="btn btn-secondary mb-4" data-bs-target="#contacts-modal" data-bs-toggle="modal">Contattaci</button>
