--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ EXTRAS
 
   <body>
     <!-- NAV START -->
-    <nav class="navbar navbar-expand-lg bg-body-secondary">
+    <nav class="navbar navbar-expand-lg bg-dark-subtle">
       <div class="container">
         <a class="navbar-brand" href="#">
           <svg
@@ -228,7 +228,7 @@ EXTRAS
 
     <div class="p-4">
     <!-- HERO START -->
-    <div id="hero"class="container rounded p-5 mt-5 bg-body-secondary">
+    <div id="hero"class="container rounded p-5 mt-5 bg-dark-subtle">
       <div class="row">
         <div class="col">
           <video autoplay muted loop id="myVideo">
@@ -609,7 +609,7 @@ EXTRAS
     <!-- RECENSIONI SECTION END-->
   </div>
     <!-- FOOTER SECTION END-->
-    <div class="bg-body-secondary p-5 d-flex flex-column align-items-center">
+    <div class="bg-dark-subtle p-5 d-flex flex-column align-items-center">
       <button class="btn btn-secondary mb-4" data-bs-target="#contacts-modal" data-bs-toggle="modal">Contattaci</button>
       <p>&copy; 2023 Andrea Di Paola. All Right Reserved.</p>
     </div>
